<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.matcha_memo_app_android.ui.fragment.MemoListFragment"
        android:label="@string/activity_top_tab_top"
        tools:layout="@layout/fragment_memo_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.matcha_memo_app_android.ui.fragment.PointListFragment"
        android:label="@string/add_point_add"
        tools:layout="@layout/fragment_point_list" />

    <fragment
        android:id="@+id/navigation_option"
        android:name="com.example.matcha_memo_app_android.ui.fragment.OptionFragment"
        android:label="@string/activity_top_tab_option"
        tools:layout="@layout/fragment_option" />

</navigation>